[gd_scene load_steps=9 format=2]

[ext_resource path="res://art/rocks.png" type="Texture" id=1]
[ext_resource path="res://Nivel2.gd" type="Script" id=2]
[ext_resource path="res://sound/point.mp3" type="AudioStream" id=3]
[ext_resource path="res://art/fondo_juego.png" type="Texture" id=9]
[ext_resource path="res://isla2.tscn" type="PackedScene" id=10]
[ext_resource path="res://player.tscn" type="PackedScene" id=14]
[ext_resource path="res://isla.tscn" type="PackedScene" id=15]
[ext_resource path="res://sky2.tscn" type="PackedScene" id=17]

[node name="Nivel2" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1023.0
margin_bottom = 619.0
color = Color( 0.0823529, 0.0588235, 0.215686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="school" type="TextureRect" parent="."]
modulate = Color( 0.4, 0.47451, 0.956863, 0.901961 )
self_modulate = Color( 0.8, 0.784, 0.794667, 1 )
margin_right = 1024.0
margin_bottom = 601.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hoyo" type="TextureRect" parent="."]
self_modulate = Color( 0.211765, 0.121569, 0.0784314, 0.698039 )
margin_left = -2.0
margin_top = 439.0
margin_right = 2050.0
margin_bottom = 795.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sky2" parent="." instance=ExtResource( 17 )]
position = Vector2( -1.26489, 0 )

[node name="food_container" type="Node" parent="."]

[node name="food" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -16.0
mix_target = 2

[node name="food_timer" type="Timer" parent="."]
one_shot = true

[node name="isla1" parent="." instance=ExtResource( 15 )]
position = Vector2( 71.0238, 369.71 )
rotation = 0.0174533

[node name="isla2" parent="." instance=ExtResource( 15 )]
position = Vector2( 262.041, 517.308 )

[node name="isla3" parent="." instance=ExtResource( 15 )]
position = Vector2( 410.213, 265.749 )

[node name="isla4" parent="." instance=ExtResource( 15 )]
position = Vector2( 565.497, 522.428 )

[node name="isla5" parent="." instance=ExtResource( 15 )]
position = Vector2( 777.642, 402.669 )

[node name="endisla" parent="." instance=ExtResource( 10 )]
position = Vector2( 960.425, 214.101 )
rotation = -0.0349066

[node name="player" parent="." instance=ExtResource( 14 )]
position = Vector2( 72.0294, 44.4985 )

[connection signal="timeout" from="food_timer" to="." method="_on_food_timer_timeout"]
